[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intervalsicu"
version = "0.1.3"
authors = [
  { name="Ryan Day", email="ryanday2@gmail.com" },
]
description = "A basic interface to the Intervals.icu system"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
]
docs = [
    "sphinx-autoapi>=1.7.0",
    "sphinx-rtd-theme>=0.5.1",
]

[project.urls]
"Homepage" = "https://github.com/rday/py-intervalsicu"
"Bug Tracker" = "https://github.com/rday/py-intervalsicu"

[tool.setuptools.packages.find]
where = ["src"]
